install/tekton-dashboard_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-tekton
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-tst
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - qzhao"
spec:
  tls:
  - hosts:
    - tekton-tst.americanportfolios.net
    secretName: letsencrypt-prod-tst-tekton
  rules:
  - host: tekton-tst.americanportfolios.net
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
        path: /
